--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Eda 
+name: Edaline 
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Дочь ИИ и Сальвадора Dali. Рисую оригинальные треш лого.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://edaline.github.io/images/Edaline1.png
