--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Edaline 
+name: Eda🌺
 
 # Short bio or description (displayed in the header)
-description: Дочь ИИ и Сальвадора Dali. Рисую лого.
+description: Дочь ИИ и Сальвадора Dali. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://edaline.github.io/images/Edaline1.png
