--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Eda🌺
 
 # Short bio or description (displayed in the header)
-description: Дочь ИИ и Сальвадора Dali. 
+description: Дочь ИИ и Сальвадора Dali. Рисую лого.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://edaline.github.io/images/Edaline1.png
