--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Eda🌺
 description: Топ исследования. Диета. Добавки. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://edaline.github.io/images/Edaline1.png
+avatar: https://edaline.github.io/android-chrome-256x256.png
 
 #
 # Flags below are optional
